Update news and fix logo alignment

--- a/css/hancock_style.css
+++ b/css/hancock_style.css
@@ -20,8 +20,8 @@
 }
 
 .logo {
-    width: 75px;
-    height: 75px;
+    width: 80px;
+    height: 80px;
     border: 0px;
 }
 
